--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.3.2",
     "country-state-city": "^3.1.4",
     "daisyui": "^2.52.0",
+    "immer": "^10.0.4",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -34,6 +35,7 @@
     "react-query": "^3.39.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
+    "react-select": "^5.8.0",
     "react-to-print": "^2.14.13",
     "zustand": "^4.4.4"
   },
