--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
+    "@react-google-maps/api": "^2.19.3",
     "@refinedev/antd": "^5.36.14",
     "@tanstack/react-query-devtools": "^4.29.11",
     "antd": "^5.5.1",
@@ -32,6 +33,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5",
     "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
