--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@react-google-maps/api": "^2.19.3",
+    "@react-pdf/renderer": "^4.0.0",
     "@refinedev/antd": "^5.36.14",
     "@tanstack/react-query-devtools": "^4.29.11",
     "antd": "^5.5.1",
@@ -39,6 +40,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-pdf": "^9.1.1",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.2.23",
     "react-query": "^3.39.3",
